--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,66 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #121212;
+  color: #fff;
+  font-family: Arial, sans-serif;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+div {
+  margin: 20px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ul {
+  list-style: none;
+  padding: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+li {
+  background-color: #333;
+  margin: 5px 0;
+  padding: 10px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.card {
-  padding: 2em;
+button {
+  cursor: pointer;
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  margin-left: 10px;
 }
 
-.read-the-docs {
-  color: #888;
+button:hover {
+  opacity: 0.8;
+}
+
+input {
+  padding: 10px;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  width: 200px;
+}
+
+.test {
+  color: #61dafb;
+}
+
+.confirm-btn {
+  background-color: #ff6f61;
+}
+
+.delete-btn {
+  background-color: #333;
+}
+
+.edit-btn {
+  background-color: #28a745;
+}
+
+.add-btn {
+  background-color: #ff69b4;
 }
